--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <button onclick="capture()" id="setgrid">Grid size</button>
+    <button onclick="capture()" id="setgrid">Grid size</button><button onclick="drawingPartyMode()" id="rgb">Party Mode</button>
     <div id="container">
 
 
