--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
 </head>
 <body>
-    <button onclick="capture()" id="setgrid">Grid size</button><button onclick="drawingPartyMode()" id="rgb">Party Mode</button>
+    <button onclick="capture()" id="setgrid">Grid size</button><button onclick="drawingPartyMode()" id="rgb">Party Mode</button><button onclick="toggleBorder()" id="rgb">Toggle Border</button>
+    <div id="square">
     <div id="container">
 
 
+    </div>
     </div>
 
 
