--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <input type="range" id="gridsize" name="gridsize" min="16" max="100" value="16" step="8"><label for="gridsize">Grid size</label>
         </div>
 
+        <div id="footer">
+            made by <a href="https://github.com/imaadh/etch" target="_blank">imaadh</a>
+        </div>
     </div>
 
 
